# Jadoo

./: .gitignore  .replit  Dockerfile  README 2.md  README.md  ROADMAP.md  TODO.md  TRANSFORMER_IMPROVEMENTS.md  amazon_inventory_template.csv  amazon_sample_products.csv  amazon_template_fields.txt  app.py  app_amazon.py  app_catch.py  app_direct.py  app_meta.py  app_reebelo.py  app_smart.py  app_tiktok.py  app_unified.py  app_walmart.py  clean_csv.py  cleaned_test_data.csv  cookies.txt  csv_cleaner.py  db_utils.py  demo.html  deploy-checklist.md  direct_amazon_transform.py  direct_csv_transform.py  direct_transform.py  download_test.xlsx  download_test2.xlsx  drizzle.config.json  dump.rdb  feeds.db  fly.toml  health-check.js  last-fly-logs.txt  openaiClient.js  (+50 more)
attached_assets/: CSV upload template ref - Mapping - Catch_Mirkal - Columns.csv  CSV upload template ref - Mapping - Catch_Mirkal - Data.csv  CSV upload template ref - Mapping - Catch_Mirkal - ReferenceData.csv  CSV upload template ref - Mapping - Reebelo _ New (WIP).csv  CSV upload template ref - Mapping - WM _ Cell Phones - Data Definitions.csv  CSV upload template ref - Mapping - WM _ Cell Phones - Product Content And Site Exp.csv  Flat.File.InventoryLoader.xls  Pasted--You-re-onto-something-clean-premium-and-scalable-the-dark-theme-with-slick-cards-and-smooth-f-1746939959346.txt  Pasted-Catalog-Product-Parameters-Last-updated-February-2025-Before-getting-started-Catalog-Product-Param-1746929452770.txt  Premium upload.csv  amazon_test_5.csv  gpt_grounding_block_combined.txt  test_1.csv  test_vendor_input.csv  (+2 more)
(+440 files in other folders)
